Fix tab spacing

--- a/src/app/sidedock.scss
+++ b/src/app/sidedock.scss
@@ -137,7 +137,7 @@ body:not(.is-mobile) {
     z-index: 1;
   }
   &:not(.layout-macos, .layout-fusion):not(.input-cupertino):not(.tab-top-left-stacked).css-settings-manager .mod-sidedock.mod-left-split .sidebar-toggle-button {
-    margin-right: 8px;
+    margin-right: calc(8px * var(--density-modifier));
   }
 
   .mod-sidedock > .workspace-leaf-resize-handle:not(:hover) {
